--- a/Ch16/inventory(16.3)/inventory/inventory.cbp
+++ b/Ch16/inventory(16.3)/inventory/inventory.cbp
@@ -31,6 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="inventory.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="readline.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="readline.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
